--- a/login.html
+++ b/login.html
@@ -126,7 +126,8 @@
 
 <script>
 function fakeLogin() {
-    alert("Succ");
+    alert("Successful login!");
+    window.location.href = "settings.html";
 }
 </script>
 
